--- a/index.html
+++ b/index.html
@@ -123,34 +123,34 @@
 
             <div class="col">
                 <div class="card mb-3">
-                    <h4 class="card-header py-3 fw-normal">Free</h4>
+                    <h4 class="card-header py-3 fw-normal">Pro</h4>
                     <div class="card-body">
-                      <h1 class="card-title">$0<small class="fw-light text-body-secondary">/mo</small></h1>
+                      <h1 class="card-title">$15<small class="fw-light text-body-secondary">/mo</small></h1>
                       <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
+                        <li>20 users included</li>
+                        <li>10 GB of storage</li>
+                        <li>Priority email support</li>
+                        <li>center access</li>
                       </ul>
                 
-                      <a href="#" class="btn btn-outline-primary btn-lg w-100">Sign up for free</a>
+                      <a href="#" class="btn btn-primary btn-lg w-100">Sign up for free</a>
                     </div>
                   </div>
             </div>
 
             <div class="col">
-                <div class="card mb-3">
-                    <h4 class="card-header py-3 fw-normal">Free</h4>
+                <div class="card mb-3 border-primary">
+                    <h4 class="card-header py-3 fw-normal bg-primary text-white">Enterprise</h4>
                     <div class="card-body">
-                      <h1 class="card-title">$0<small class="fw-light text-body-secondary">/mo</small></h1>
+                      <h1 class="card-title">$29<small class="fw-light text-body-secondary">/mo</small></h1>
                       <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
+                        <li>30 users included</li>
+                        <li>15 GB of storage</li>
                         <li>Email support</li>
                         <li>Help center access</li>
                       </ul>
                 
-                      <a href="#" class="btn btn-outline-primary btn-lg w-100">Sign up for free</a>
+                      <a href="#" class="btn btn-primary btn-lg w-100">Sign up for free</a>
                     </div>
                   </div>
             </div>
