--- a/checkout.html
+++ b/checkout.html
@@ -164,8 +164,41 @@
             </form>
         </div>
         <div class="col-4">
-          <h5>Your cart</h5>
-        
+          <h4 class="text-primary d-flex justify-content-between mb-3">Your cart <span class="badge rounded-pill bg-primary">4</span></h4>
+          <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <h6 class="mb-0">Spodnie</h6>
+                <small class="text-body-secondary">Krótki opis</small>
+              </div>
+              <span class="text-body-secondary">$10</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <h6 class="mb-0">Koszulka</h6>
+                <small class="text-body-secondary">Krótki opis</small>
+              </div>
+              <span class="text-body-secondary">$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <h6 class="mb-0">Buty</h6>
+                <small class="text-body-secondary">Krótki opis</small>
+              </div>
+              <span class="text-body-secondary">$20</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between text-success">
+              <div>
+                <h6 class="mb-0">Promo code</h6>
+                <small>SPRINGCODE</small>
+              </div>
+              <span>-$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <h6 class="mb-0">Total (USD)</h6>
+              <strong>$30</strong>
+            </li>
+          </ul>
         </div>
       </div>
     </main>
