--- a/checkout.html
+++ b/checkout.html
@@ -165,7 +165,24 @@
         </div>
         <div class="col-4">
           <h4 class="text-primary d-flex justify-content-between mb-3">Your cart <span class="badge rounded-pill bg-primary">4</span></h4>
-          <ul class="list-group">
+          <div class="mb-3 border rounded-top">
+            <div class="d-flex justify-content-between py-2 px-3 border-bottom">
+              <div>
+                <h6 class="mb-0">Spodnie</h6>
+                <small class="text-body-secondary">Krótki opis</small>
+              </div>
+              <span class="text-body-secondary">$10</span>
+            </div>
+            <div  class="d-flex justify-content-between py-2 px-3">
+              <div>
+                <h6 class="mb-0">Koszulka</h6>
+                <small class="text-body-secondary">Krótki opis</small>
+              </div>
+              <span class="text-body-secondary">$5</span>
+            </div>
+          </div>
+          
+          <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between">
               <div>
                 <h6 class="mb-0">Spodnie</h6>
@@ -199,6 +216,14 @@
               <strong>$30</strong>
             </li>
           </ul>
+
+          <div class="p-2 border rounded">
+            <div class="input-group">
+              <input type="text" placeholder="Promo code" class="form-control">
+              <button class="btn btn-secondary">Redeem</button>
+            </div>
+          </div>
+
         </div>
       </div>
     </main>
