--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     </section>
 
     <section id="contact" class="container my-5 text-center">
-      <div class="p-5">
+      <div class="p-2 p-lg-5">
         <i class="bi bi-telephone-fill display-1"></i>
         <h1 class="mt-3 ">Contact us</h1>
-        <p class="text-secondary fs-5 col-6 mx-auto">
+        <p class="text-secondary fs-5 col-12 col-lg-9 col-xl-6 mx-auto">
           Sed mattis convallis tempus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae
         </p>
-        <div class="d-flex justify-content-center gap-2">
+        <div class="d-flex flex-column flex-sm-row justify-content-center gap-2">
           <button class="btn btn-primary btn-lg rounded-pill px-3" data-bs-toggle="modal" data-bs-target="#contactModal">Contact us  →</button>
           <button class="btn btn-outline-secondary btn-lg rounded-pill px-3">Read more</button>
         </div>
@@ -281,12 +281,12 @@
     </footer> -->
 
     <footer class="container mt-5 pt-5 pb-2 border-top">
-      <div class="row">
-        <div class="col">
+      <div class="row gy-3">
+        <div class="col-12 col-md-3">
           <i class="bi bi-award-fill fs-4"></i>
           <small class="d-block">© 2020-2024</small>
         </div>
-        <div class="col">
+        <div class="col-6 col-md-3">
           <h5>Features</h5>
           <ul class="list-unstyled">
             <li class="mb-1">
@@ -309,7 +309,7 @@
             </li>
           </ul>
         </div>
-        <div class="col">
+        <div class="col-6 col-md-3">
           <h5>Resources</h5>
           <ul class="list-unstyled">
             <li class="mb-1">
@@ -326,7 +326,7 @@
             </li>
           </ul>
         </div>
-        <div class="col">
+        <div class="col-6 col-md-3">
           <h5>About</h5>
           <ul class="list-unstyled">
             <li class="mb-1">
