--- a/checkout.html
+++ b/checkout.html
@@ -41,18 +41,18 @@
       </nav>
 
     <header class="container my-5 text-center">
-      <div class="p-5">
+      <div class="p-2 p-lg-5">
         <i class="bi bi-cart-check-fill display-1"></i>
         <h1 class="mt-3 ">Checkout</h1>
-        <p class="text-secondary fs-5 col-6 mx-auto">
+        <p class="text-secondary fs-5 col-12 col-lg-9 col-xl-6 mx-auto">
           Sed mattis convallis tempus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae
         </p>
       </div>
     </header>
 
     <main class="container">
-      <div class="row">
-        <div class="col-8">
+      <div class="row gy-5 gy-md-0 flex-column-reverse flex-md-row">
+        <div class="col-12 col-md-7 col-lg-8">
             <h4 class="mb-3">Billing address</h4>
             <form class="needs-validation" novalidate>
               <div class="row g-3">
@@ -83,7 +83,7 @@
                   <label for="address2" class="form-label">Address 2 <span class="text-body-secondary">(Optional)</span></label>
                   <input id="address2" type="text" placeholder="Apartament or suite" class="form-control" />
                 </div>
-                <div class="col-5">
+                <div class="col-12 col-md-5">
                   <label for="country" class="form-label">Country</label>
                   <select id="country" class="form-select" required>
                     <option selected disabled>Choose...</option>
@@ -92,7 +92,7 @@
                     <option value="3">France</option>
                   </select>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                   <label for="state" class="form-label">State</label>
                   <select id="state" class="form-select" required>
                     <option value="1">Texas</option>
@@ -100,7 +100,7 @@
                     <option value="3">Florida</option>
                   </select>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                   <label for="zip" class="form-label">ZIP</label>
                   <input type="text" class="form-control" id="zip" required />
                 </div>
@@ -141,20 +141,20 @@
                 </div>
               </div>
                 <div class="row g-3">
-                  <div class="col-6">
+                  <div class="col-12 col-md-6">
                     <label for="holderName" class="form-label">Name on card</label>
                     <input type="text" class="form-control" id="holderName" required />
                     <div class="form-text">Full name as dispalyed on card</div>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-md-6">
                     <label for="cardNumber" class="form-label">Credit card number</label>
                     <input type="text" class="form-control" id="cardNumber" required />
                   </div>
-                  <div class="col-3">
+                  <div class="col-12 col-md-3">
                     <label for="expiration" class="form-label">Expiration</label>
                     <input type="text" class="form-control" id="expiration" required />
                   </div>
-                  <div class="col-3">
+                  <div class="col-12 col-md-3">
                     <label for="cvv" class="form-label">CVV</label>
                     <input type="text" class="form-control" id="cvv" required />
                   </div>
@@ -163,9 +163,9 @@
                 <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
             </form>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-5 col-lg-4">
           <h4 class="text-primary d-flex justify-content-between mb-3">Your cart <span class="badge rounded-pill bg-primary">4</span></h4>
-          <div class="mb-3 border rounded-top">
+          <!-- <div class="mb-3 border rounded-top">
             <div class="d-flex justify-content-between py-2 px-3 border-bottom">
               <div>
                 <h6 class="mb-0">Spodnie</h6>
@@ -180,7 +180,7 @@
               </div>
               <span class="text-body-secondary">$5</span>
             </div>
-          </div>
+          </div> -->
           
           <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between">
